<resources>
    <string name="mapbox_access_token" translatable="false">sk.eyJ1IjoiY3liZXJjYXIiLCJhIjoiY2xyNHRuY3k4MHV0bTJqbzg2NWt2dTJ3ZSJ9.6VTWDIDD7wXps_Pi2pgK1Q</string>
    <string name="app_name">Cyber Go</string>
    <string name="splash_process">Loading…</string>
    <string name="sub_welcome">Have a better sharing experience</string>
    <string name="create_account">Create an account</string>
    <string name="login">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="agree_term_policy">I understand and agree with the Cyber Go Privacy policy and Terms.</string>
    <string name="terms">Terms</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="or">or</string>
    <string name="already_have_an_account">Already have an account? Sign in</string>
    <string name="select_gender">Select gender</string>
    <string name="other">Other</string>
    <string name="can_not_empty">can\'t empty</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_phone_number">Invalid phone number</string>
    <string name="please_agree_to_our_privacy_policy_and_terms">Please agree to our privacy policy and terms</string>
    <string name="phone_verification">Phone verification</string>
    <string name="enter_your_otp_code">Enter your OTP code</string>
    <string name="did_not_receive_code">Didn\'t receive code? Resend again</string>
    <string name="resend_again">Resend again</string>
    <string name="verify">Verify</string>
    <string name="you_have_not_received_the_otp_code_yet">You haven\'t received the OTP code yet?</string>
    <string name="cancel">Cancel</string>
    <string name="set_password">Set password</string>
    <string name="set_your_password">Set your password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="do_not_have_an_account">Don’t have an account? Sign up</string>
    <string name="can_not_contain_space">can\'t contain space</string>
    <string name="must_be_greater_than_or_equal_to_8_characters">must be greater than or equal to 8 characters</string>
    <string name="does_not_match">does not match</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="wrong_email_or_password">Wrong email or password</string>
    <string name="try_again">Try again</string>
    <string name="sign_up_success">Sign up success</string>
    <string name="we_have_sent_the_account_activation_code_to_your_phone_number">We have sent the account activation code to your phone number</string>
    <string name="next">Next</string>
    <string name="account_already_exist">Account already exist</string>
    <string name="we_found_an_account_that_was_previously_registered_but_not_activated">We found an account that was previously registered but not activated</string>
    <string name="please_enter_the_otp_code">Please enter the OTP code</string>
    <string name="otp_code_is_incorrect_please_check_again">OTP code is incorrect, please check again</string>
    <string name="your_request_is_invalid">Your request is invalid</string>
    <string name="can_not_connect_to_server">Can\'t connect to server</string>
    <string name="close">Close</string>
    <string name="otp_code_is_incorrect">OTP code is incorrect</string>
    <string name="email_has_been_used">Email has been used</string>
    <string name="phone_number_has_been_used">Phone number has been used</string>
    <string name="and">and</string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="chat">Chat</string>
    <string name="activity">Activity</string>
    <string name="map">Map</string>
    <string name="car">Car</string>
    <string name="motorbike">Motorbike</string>
    <string name="truck">Truck</string>
    <string name="all">All</string>
    <string name="go" translatable="false">Go</string>
    <string name="find_trip">Find trip</string>
    <string name="share_my_trip">Share my trip</string>
    <string name="the_type_of_transportation_you_want_to_share">The type of vehicle you want to share</string>
    <string name="choose_location">Choose location</string>
    <string name="origin">Origin</string>
    <string name="destination">Destination</string>
    <string name="select_the_starting_point_on_the_map">Select the starting point on the map</string>
    <string name="select_destination_on_the_map">Select destination on the map</string>
    <string name="looking_for_your_location">Looking for your location</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="this_helps_us_determine_your_exact_location">This helps us determine your exact location</string>
    <string name="allow_location_access">Allow location access</string>
    <string name="select">Select</string>
    <string name="we_couldnt_find_an_address_that_matches_your_selection">We couldn\'t find an address that matches your selection</string>
    <string name="address_not_found">Address not found</string>
    <string name="no_suitable_route_was_found">No suitable route was found</string>
    <string name="route_not_found">Route not found</string>
    <string name="share_trip">Share trip</string>
    <string name="share">Share</string>
    <string name="start_date">Start date</string>
    <string name="start_time">Start time</string>
    <string name="theme_mode" translatable="false">light</string>
    <string name="location">Location</string>
    <string name="my_information">My information</string>
    <string name="my_vehicle">My vehicle</string>
    <string name="register_vehicle">Register vehicle</string>
    <string name="driving_license">Driving license</string>
    <string name="identity_number">Identity number</string>
    <string name="front_id_card">Front of ID card</string>
    <string name="back_id_card">Back of ID card</string>
    <string name="curriculum_vitae">Curriculum vitae</string>
    <string name="driver_avatar">Driver avatar</string>
    <string name="front_driving_license">Front of driving license</string>
    <string name="back_driving_license">Back of driving license</string>
    <string name="front_vehicle">Front of vehicle</string>
    <string name="back_vehicle">Back of vehicle</string>
    <string name="right_side_vehicle">Right side of vehicle</string>
    <string name="left_side_vehicle">Left side of vehicle</string>
    <string name="license_plates">License plates</string>
    <string name="please_enter_all_fields_including_text_and_images">Please enter all fields including text and images</string>
    <string name="missing_some_information">Missing some information</string>
    <string name="the_information_has_been_sent_we_will_review_and_respond_later">The information has been sent, we will review and respond later</string>
    <string name="go_back">Go back</string>
    <string name="profile">Profile</string>
    <string name="edit_id_card">Edit ID card</string>
    <string name="identity_card">Identity Card</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="address">Address</string>
    <string name="edit_phone_number">Edit phone number</string>
    <string name="update">Update</string>
    <string name="there_are_no_changes">There are no changes</string>
    <string name="successfully_updated">Successfully updated</string>
    <string name="vehicle_registration_certificate">Vehicle registration certificate</string>
    <string name="vehicle">Vehicle</string>
    <string name="front_vehicle_registration_certificate">Front of vehicle registration certificate</string>
    <string name="back_of_vehicle_registration_certificate">Back of vehicle registration certificate</string>
    <string name="permission_mess">If you reject permission,you can not use this service. Please turn on permissions at [Setting] > [Permission]</string>
    <string name="success_send_driver_registration_mess">You have successfully submitted your registration information, we will review and respond via email</string>
    <string name="vehicle_type">Vehicle type</string>
    <string name="select_vehicle_type">Select vehicle type</string>
    <string name="account">Account</string>
    <string name="notification">Notification</string>
    <string name="vehicle_name">Vehicle name</string>
    <string name="select_your_vehicle">Select your vehicle</string>
    <string name="vehicle_detail">Vehicle detail</string>
    <string name="reason_for_rejection">Reason for rejection</string>
    <string name="trip_information">Trip information</string>
    <string name="distance">Distance</string>
    <string name="time">Time</string>
    <string name="destination_type_selection">Destination type selection</string>
    <string name="single">Single</string>
    <string name="multiple">Multiple</string>
    <string name="the_type_of_destination_you_want">The type of destination you want</string>
    <string name="total_distance">Total distance</string>
    <string name="total_time">Total time</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="previous">Previous</string>
    <string name="trip">Trip</string>
    <string name="trip_name">Trip name</string>
    <string name="multiple_destination">Multiple destinations</string>
    <string name="single_destination">Single destination</string>
    <string name="free">Free</string>
    <string name="trip_management">Trip management</string>
    <string name="shared_successfully">Shared successfully</string>
    <string name="you_will_get_notification_when_someone_else_wants_to_join_you">You\'ll get a notification when someone else wants to join you</string>
    <string name="trip_detail">Trip detail</string>
    <string name="member">Member</string>
    <string name="information">Information</string>
    <string name="no_description_available">No description available</string>
    <string name="no_members_have_been_joined_yet">No members have been joined yet</string>
    <string name="request_to_join">Request to join</string>
    <string name="request_has_been_sent">Request has been sent</string>
    <string name="the_request_to_join_the_trip_has_been_sent_please_wait_for_notification_from_owner">The request to join the trip has been sent, please wait for notification from owner</string>
    <string name="logout">Logout</string>
    <string name="waiting_for_response_from_owner">Waiting for response from owner</string>
    <string name="not_update">Not update</string>
    <string name="birthday">Birthday</string>
    <string name="the_route_is_too_long">The route is too long</string>
    <string name="please_reduce_the_distance_of_your_route">Please reduce the distance of your route</string>
    <string name="selection_match_percentage">Select match percentage</string>
    <string name="trip_participated">Trip participated</string>
    <string name="shared_trip">Shared trip</string>
    <string name="finish">Finish</string>
    <string name="leave">Leave</string>
    <string name="delete">Delete</string>
    <string name="open_again">Open again</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="otp_code">OTP code</string>
    <string name="reset">Reset</string>
    <string name="receive_otp_code_in_your_email">Receive OTP code in your email</string>
</resources>