<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/go_fragment_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/logo_white_full"
        android:title="@string/go" />
    <item
        android:id="@+id/trip_fragment_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_delivery"
        android:title="@string/trip" />
<!--    <item-->
<!--        android:id="@+id/chat_fragment_item"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:icon="@drawable/ic_chat"-->
<!--        android:title="@string/chat" />-->
    <item
        android:id="@+id/account_fragment_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_user"
        android:title="@string/account" />
</menu>