<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:orientation="vertical"
        android:minWidth="@dimen/_300sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_current_pass"
            style="@style/input"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_height="@dimen/_55sdp"
            app:errorEnabled="true"
            app:errorIconDrawable="@null"
            app:passwordToggleEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                style="@style/edit_text_input"
                android:layout_height="@dimen/_35sdp"
                android:textSize="@dimen/_11ssp"
                android:hint="@string/current_password"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_new_pass"
            style="@style/input"
            android:layout_height="@dimen/_55sdp"
            app:errorEnabled="true"
            app:errorIconDrawable="@null"
            app:passwordToggleEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                style="@style/edit_text_input"
                android:layout_height="@dimen/_35sdp"
                android:textSize="@dimen/_11ssp"
                android:hint="@string/new_password"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_confirm_pass"
            style="@style/input"
            android:layout_height="@dimen/_55sdp"
            app:errorEnabled="true"
            app:errorIconDrawable="@null"
            app:passwordToggleEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                style="@style/edit_text_input"
                android:layout_height="@dimen/_35sdp"
                android:textSize="@dimen/_11ssp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:gravity="end"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_update"
               style="@style/btn_small_success"
                android:text="@string/update"
                />
            <androidx.appcompat.widget.AppCompatButton
                style="@style/btn_small_secondary"
                android:id="@+id/btn_cancel"
                android:text="@string/cancel"
                />
        </LinearLayout>
    </LinearLayout>
</layout>