<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="view_model"
            type="com.tech.cybercars.ui.signin.forgot_password.ForgotPasswordViewModel" />
    </data>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:textSize="@dimen/_12sdp"
                android:textAlignment="center"
                android:text="@string/receive_otp_code_in_your_email"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_otp_code"
                style="@style/input"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <com.google.android.material.textfield.TextInputEditText
                    style="@style/edit_text_input"
                    android:text="@={view_model.otp_code}"
                    android:hint="@string/otp_code" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_new_pass"
                style="@style/input"
                app:errorEnabled="true"
                app:errorIconDrawable="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_email_sign_in"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/edit_text_input"
                    android:hint="@string/new_password"
                    android:text="@={view_model.new_pass}"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_confirm_pass"
                style="@style/input"
                app:errorEnabled="true"
                app:errorIconDrawable="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_email_sign_in"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/edit_text_input"
                    android:hint="@string/confirm_password"
                    android:text="@={view_model.confirm_pass}"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatButton
                style="@style/btn_small_primary_outline"
                android:layout_width="@dimen/_0dp"
                android:layout_weight="1"
                android:text="@string/previous"
                android:id="@+id/btn_previous"/>
            <androidx.appcompat.widget.AppCompatButton
                style="@style/btn_small_success"
                android:layout_width="@dimen/_0dp"
                android:layout_weight="1"
                android:text="@string/reset"
                android:id="@+id/btn_update_pass"/>
        </LinearLayout>
    </LinearLayout>
</layout>